# tauri-plugin-sql

./: Cargo.toml
dist-js/: index.d.ts  index.min.js.map  index.mjs.map
src/: commands.rs  lib.rs  wrapper.rs
